renamed class, moved main application logics there